# Projet_Mif23_Analyse

./: .gitignore  Analyse  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  truc
Data/: fond1.avi
src/: Bloc_Region.cpp  Bloc_Region.h  constantes.h  main.cpp  misc  utils.cpp  utils.h
